# hakkun-3ds

./: .gitignore  CMakeLists.txt  README.md
Data/: LinkerTemplate.ld.in
Data/compiler-rt/: build.py
Include/hk/hook/: BranchHook.h
Include/hk/system/: PatchHeader.h
Include/nn/: Result.h
Include/nn/svc/: svc_Api.h
Source/: main.cpp
Source/hk/system/: Init.cpp
Source/nn/svc/: svc_Api.S
Tools/: setup.py
Tools/ExheaderCli/Include/: PatchHeader.h
Tools/ExheaderCli/Include/Patch/: BranchHook.h
Tools/ExheaderCli/Source/: main.cpp
Tools/ExheaderCli/Source/Patch/: BranchHook.cpp  PatchBase.cpp
